Add user controller. Add person template. Wrap middleware inside try catch. Edit swagger.json: add routes info
