# routes/userRouter.js
@@ -2,19 +2,11 @@
 
 const { Router } = require('express')
 
-const User = require('../models/User')
+const userController = require('../controllers/userController')
+const tryCatchWrapper = require('../middleware/tryCatchWrapper')
 
 const userRouter = new Router()
 
-userRouter.get('/profile', async (req, res, next) => {
-    const user = await User.findOne({}).populate('trees') // FIXME: get current user from session
-    if (user) {
-        return res.render('profile', {
-            title: 'Profile',
-            user
-        })
-    }
-    return res.redirect('/auth/login')
-})
+userRouter.get('/profile', tryCatchWrapper(userController.getProfilePage))
 
 module.exports = userRouter
